--- a/index.Rmd
+++ b/index.Rmd
@@ -10,7 +10,26 @@ knitr::opts_chunk$set(echo = TRUE)
 library(fontawesome)
 ```
 
-#### `r fa("exclamation-triangle", fill = "#d9534f")` Interní dokumentace - neslouží k dalšímu šíření {.bs-callout .bs-callout-red} 
+#### `r fa("exclamation-triangle", fill = "#d9534f")` Interní dokumentace: **nešířit** {.bs-callout .bs-callout-red} 
 
 Naposledy aktualizováno `r format(Sys.time(), "%d. %B %Y, %H:%M")`
 
+#
+
+Tato sada stránek ukazuje postup a výsledky kontroly a čištění dat o projektech ESIF.
+
+## Co je kde
+
+Viz horní menu, sleduje postup zleva doprava:
+
+- Validace
+  - [kontrola úplnosti a konzistence vstupních dat](01_input-checks.html)
+  - [Validace geodat oproti číselníkům](02_validate.html)
+- [Analýza struktury geodat](03_explore.html)
+- Úprava dat (TO DO)
+- [Záznam kroků a poznatků](log.html): obsahuje časově utříděné hlavní poznatky a otázky z jednotlivých kroků
+- [Dokumentace](dev.html): jak je projekt stavěn a jak kód spustit znova
+
+#### `r fa("info-circle", fill = "black")` Zadavatel {.bs-callout .bs-callout-grey}
+
+Ministerstvo pro místní rozvoj, financováno z OP Technická pomoc.
