--- a/01_input-checks.Rmd
+++ b/01_input-checks.Rmd
@@ -10,17 +10,24 @@ library(metathis)
 library(tidyverse)
 library(arrow)
 library(fontawesome)
+library(pointblank)
 
 source(here::here("shared.R"))
 ```
 
 ```{r load data}
-dt <- read_parquet(here::here("data-processed", "misto_renamed.parquet"))
+dt <- read_parquet(here::here("data-processed", "misto_renamed-n.parquet"))
 ```
 
 ## Jak to číst
 
 Tento skript/dokument funguje tak, že se snaží najít řádky/projekty s nějakou vnitřní nekonzistencí. V prvním gardu pak vyhodí počet takových řádků. Pokud je pod kódem vidět `0`, je vše v pořádku.
+
+```{r}
+al <- action_levels(warn_at = 1)
+as <- action_levels(stop_at = 1)
+```
+
 
 ## Počty a ID projektů
 
@@ -28,22 +35,26 @@ Tento skript/dokument funguje tak, že se snaží najít řádky/projekty s něj
 
 ```{r no-id}
 dt %>% 
-  filter(is.na(prj_id)) %>% 
-  nrow()
+  create_agent("project IDs") %>% 
+  col_vals_not_null(c(op_id, prj_id)) %>% 
+  interrogate()
 ```
 
 ### Dávají čísla projektů smysl?
 
 Délky:
 
-```{r prj-id-length}
+
+```{r, results="hold", collapse=TRUE}
 dt %>% 
-  distinct(prj_id, .keep_all = T) %>% 
-  mutate(prj_id_len = str_length(prj_id)) %>% 
-  count(op_id, prj_id_len) %>% 
-  arrange(prj_id_len) %>% 
-  spread(prj_id_len, n)
+  create_agent("project number") %>% 
+  col_is_character(starts_with("g_")) %>% 
+  col_vals_regex(prj_id, ".{12,15}", actions = al, brief = "Proj num len") %>% 
+  col_vals_not_null(c(op_id, prj_id)) %>% 
+  col_vals_regex(g_zuj_id, ".{11}", actions = al, na_pass = T) %>% 
+  interrogate()
 ```
+
 
 ```{r prj-id-short-list}
 dt %>% 
@@ -80,22 +91,44 @@ write_parquet(dt_long_g, here::here("data-processed", "misto_long-geo.parquet"))
 
 ```{r noplace-n}
 dt_noplace <- dt_long_g %>%
-  group_by(prj_id, op_id) %>% 
+  group_by(prj_id, op_id, p_nazev, p_sidlo_nazev, prj_nazev) %>% 
   summarise(all_na = all(is.na(value))) %>% 
-  filter(all_na) %>% 
-  ungroup()
+  ungroup() 
 
-nrow(dt_noplace)
 ```
+
+```{r, message=F}
+dtonpl_agent <- dt_noplace %>% 
+  create_agent() %>% 
+  col_vals_equal(all_na, FALSE) 
+
+dtonpl_agent %>% 
+  interrogate(extract_failed = T)
+```
+
+
+```{r, message=F}
+dtonpl_agent %>% 
+  interrogate() %>% 
+  get_data_extracts(i = 1)
+```
+
 
 ```{r noplace-op}
 dt_noplace %>% 
+  filter(all_na) %>% 
   count(op_id)
+```
+
+```{r noplace-op-zadatel}
+dt_noplace %>% 
+  count(op_id, p_nazev, p_sidlo_nazev)
 ```
 
 ```{r noplace-list}
 dt_noplace
 ```
+
 ```{r}
 dt %>% 
   filter(prj_id %in% dt_noplace$prj_id)
@@ -136,6 +169,8 @@ dt_long_g %>%
 
 ## Dávají data o příjemci smysl?
 
+
+
 ### Je ve všech řádcích každého projektu to stejné sídlo? 
 
 ```{r prij-sidlo-id-mismatch}
@@ -143,8 +178,9 @@ dt %>%
   group_by(prj_id) %>% 
   summarise(sidlo_id_unique = n_distinct(p_sidlo_id),
             sidlo_name_unique = n_distinct(p_sidlo_nazev)) %>% 
-  filter(sidlo_id_unique > 1 | sidlo_name_unique > 1) %>% 
-  nrow()
+  create_agent() %>% 
+  col_vals_equal(sidlo_id_unique, 1) %>% 
+  col_vals_equal(sidlo_name_unique, 1)
 ```
 
 
@@ -153,9 +189,10 @@ dt %>%
 ```{r prij-missing}
 dt %>% 
   filter(prj_radek == 1) %>% 
-  filter(is.na(p_nazev)) %>% 
-  select(op_id, prj_id, p_sidlo_id, p_sidlo_nazev, p_nazev, prj_nazev)
+  filter(is.na(p_nazev) | is.na(p_ico)) %>% 
+  select(op_id, prj_id, p_sidlo_id, p_sidlo_nazev, p_nazev, p_ico, prj_nazev)
 ```
+
 ### Chybí někde údaje o sídle?
 
 ```{r prij-sidlo-missing}
@@ -164,13 +201,14 @@ dt %>%
   filter(is.na(p_sidlo_id) | is.na(p_sidlo_nazev)) %>% 
   select(op_id, prj_id, p_sidlo_id, p_sidlo_nazev, p_nazev, prj_nazev)
 ```
+
 Ehm, takže asi existují projekty, kde známe místo sídla a neznáme název příjemce
 
 ```{r prij-incognito}
 dt %>% 
   filter(prj_radek == 1) %>% 
   filter(is.na(p_nazev) & (!is.na(p_sidlo_id) | !is.na(p_sidlo_nazev))) %>% 
-  select(op_id, p_sidlo_id, p_sidlo_nazev, p_nazev, prj_id) %>% 
+  select(op_id, p_sidlo_id, p_sidlo_nazev, p_nazev, prj_id, prj_nazev) %>% 
   arrange(prj_id)
 ```
 
@@ -178,17 +216,35 @@ dt %>%
 
 ```{r prij-sidlo-match-df}
 dt_long_sidla <- dt %>%
-  group_by(prj_id, prj_radek) %>% 
+  group_by(prj_id, prj_radek, p_nazev, p_ico) %>% 
   pivot_longer(cols = starts_with("p_sidlo_")) %>%
   separate(name, c("p_", "sidlo", "typ")) %>% 
   select(op_id, prj_id, typ, value)
 ```
 
-```{r prij-sidlo-mismatch-list}
+```{r prij-sidlo-mismatch-list, validate = T}
 dt_long_sidla %>% 
   pivot_wider(id_cols = c(prj_id, prj_radek),
               names_from = typ, values_from = value) %>% 
-  group_by(id) %>% 
-  summarise(distinct_ids = n_distinct(id)) %>% 
-  filter(distinct_ids > 1)
+  group_by(prj_id) %>% 
+  summarise(distinct_ids = n_distinct(id),
+            distinct_names = n_distinct(nazev)) %>% 
+  create_agent() %>% 
+  col_vals_equal(distinct_ids, 1, brief = "Each prj only has prijemce in one place ID") %>% 
+  col_vals_equal(distinct_names, 1, brief = "Each prj only has prijemce in one place name") %>% 
+  interrogate()
 ```
+
+Do recipients move seat? Change names?
+
+```{r prij-sidlo-change, validate = T}
+dt %>% 
+  group_by(p_ico) %>% 
+  summarise(distinct_seats = n_distinct(p_sidlo_id),
+            distinct_names = n_distinct(p_nazev)) %>%  
+  create_agent() %>% 
+  col_vals_equal(distinct_seats, 1, brief = "Each recipient only has one seat") %>% 
+  col_vals_equal(distinct_names, 1, brief = "Each recipient only has one name") %>% 
+  interrogate()
+```
+
