move reading-in of codelists into reusable script

--- a/02_validate.Rmd
+++ b/02_validate.Rmd
@@ -42,12 +42,7 @@ head(kraj_id_e)
 Děje se v `03_load-metadata.R`, aby se stahování a počítání dělalo jen jednou.
 
 ```{r metadata-load}
-cz <- read_parquet(here::here("data-processed", "cz_geo_meta.parquet"))
-csu_orp <- read_parquet(here::here("data-processed", "orp-csu.parquet"))
-csu_kraj <- read_parquet(here::here("data-processed", "kraj-csu.parquet"))
-csu_okres <- read_parquet(here::here("data-processed", "okres-csu.parquet"))
-csu_zuj <- read_parquet(here::here("data-processed", "zuj-csu.parquet"))
-csu_obec <- read_parquet(here::here("data-processed", "obec-csu.parquet"))
+source("read_metadata.R")
 ```
 
 ```{r metadata-prep}
