--- a/02_validate.Rmd
+++ b/02_validate.Rmd
@@ -47,18 +47,19 @@ source("read_metadata.R")
 ```
 
 ```{r metadata-prep}
-obce_n <- csu_obec %>% 
+obce_n <- obecnuts %>% 
   mutate(kod_n = paste0(CZNUTS, CHODNOTA2))
 
-zuj_n <- csu_zuj %>% 
+zuj_n <- zujnuts %>% 
   mutate(kod_n = paste0(CZNUTS, CHODNOTA2))
   
 head(obce_n$kod_n)
+head(zuj_n$kod_n)
 ```
 
 ## Existují kódy uvedené v datech v oficiálních číselnících?
 
-```{r validate}
+```{r validated}
 dt_validated <- dt %>% 
   mutate(valid_kraj = g_kraj_id %in% csu_kraj$CZNUTS,
          valid_obec = g_obec_id %in% obce_n$kod_n,
@@ -96,7 +97,7 @@ Oprava kódů ZÚJ: ke kratším na začátek přilepíme kód kraje
 ```{r zuj-fix}
 dt_zujfix <- dt %>% 
   mutate(g_zuj_shortid = str_sub(g_zuj_id, -6, -1)) %>% 
-  left_join(csu_zuj %>% 
+  left_join(zujnuts %>% 
               select(g_zuj_shortid = CHODNOTA2, CZNUTS)) %>% 
   mutate(g_zuj_id_new = if_else(str_length(g_zuj_id) < 11,
                                 paste0(CZNUTS, g_zuj_shortid), g_zuj_id),
@@ -155,6 +156,21 @@ dt_fixed_long <- make_long_geo(dt_zujfix)
 write_parquet(dt_fixed_long, here::here("data-processed", 
                                         "misto_fix-01-zuj_long-geo.parquet"))
 ```
+
+### Obce
+
+```{r}
+obce_nomatch <- obec_id_e[!obec_id_e %in% paste0(obecnuts$CZNUTS, obecnuts$CHODNOTA2)]
+```
+
+```{r}
+obecnuts %>% 
+  mutate(id = paste0(CZNUTS, CHODNOTA2)) %>% 
+  filter(id %in% obce_nomatch[2]) %>% 
+  pull(TEXT2)
+```
+ 
+ Brdy: https://www.risy.cz/cs/vyhledavace/obce/539996-brdy
 
 ## Validita jmen proti registrům
 
