load and check table of projects in CHKO/NP

--- a/01_input-checks.Rmd
+++ b/01_input-checks.Rmd
@@ -243,3 +243,17 @@ dt %>%
   interrogate(extract_failed = F)
 ```
 
+## Údaje o projektech v CHKO/NP
+
+```{r}
+prj_chkonp <- read_parquet(here::here("data-processed", "prj_chkonp.parquet"))
+```
+
+```{r}
+prj_chkonp %>% 
+  create_agent(actions = action_levels(stop_at = 1)) %>% 
+  col_vals_in_set(prj_id, unique(dt$prj_id)) %>% 
+  interrogate()
+```
+
+
