--- a/02_validate.Rmd
+++ b/02_validate.Rmd
@@ -14,7 +14,7 @@ source(here::here("shared.R"))
 ```
 
 ```{r data}
-dt <- read_parquet(here::here("data-processed", "misto_renamed.parquet"))
+dt <- read_parquet(here::here("data-processed", "misto_renamed-n.parquet"))
 dtl <- read_parquet(here::here("data-processed", "misto_long-geo.parquet"))
 ```
 
